# ducky

./: .gitignore  .hex_metadata.config  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  gleam.toml  mix.exs
.github/workflows/: release.yml  test.yml
native/ducky_nif/: Cargo.toml
native/ducky_nif/src/: lib.rs
priv/ducky_nif/.cargo/: config.toml
priv/ducky_nif/src/: lib.rs
src/: ducky.gleam
src/ducky/: connection.gleam  error.gleam  query.gleam  types.gleam
src/ducky/internal/: error_decoder.gleam  ffi.gleam
src/erlang/: ducky_nif.erl
test/: ducky_test.gleam
